--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <body>
     <div class="header">
         <div class="header-content">
-	    <img src="images/spoga.png" alt="spoga">
+	    
             <img src="images/LOGO PNG.png" alt="GLOBAL BASE SOURCING LIMITED">
             
             <!-- Add more images as needed -->
@@ -156,8 +156,8 @@ Small :-  Width 30cm x Length 30cm x Height 30cm
 </td>
                 </tr>
                 <tr>
-                    <th>Product CBM</th>
-                    <td>0.027</td>
+                    <th>MOQ</th>
+                    <td>1545</td>
                 </tr>
                 <tr>
                     <th>Product Weight</th>
@@ -180,28 +180,28 @@ Small :-  Width 30cm x Length 30cm x Height 30cm
                     <td>0.044</td>
                 </tr>
                 <tr>
-                    <th>20 Ft Container Carton Quantity</th>
-                    <td>636Carton</td>
+                    <th>20 Ft Container Quantity</th>
+                    <td>636</td>
                 </tr>
                 <tr>
-                    <th>40 Ft Container Carton Quantity</th>
-                    <td>1364 Carton</td>
+                    <th>40 Ft Container Quantity</th>
+                    <td>1364</td>
                 </tr>
                 <tr>
-                    <th>40 HQ Container Carton Quantity</th>
-                    <td>1545 Carton</td>
+                    <th>40 HQ Container Quantity</th>
+                    <td>1545</td>
                 </tr>
                 <tr>
                     <th>Price</th>
-                    <td><button class="link-button" id="myBtn">Show Price</button></td>
+                    <td>USD 11.98</td>
                 </tr>
                 <tr>
                     <th>FOB Port</th>
                     <td>Xiamen, China</td>
                 </tr>
                 <tr>
-                    <th>More Details - Packaging PPT</th>
-                    <td><button class="link-button" onclick="window.location.href='Link';"> </button></td>
+                    <th>Other Details</th>
+                    <td>Bulk Packed, Base Label</td>
                 </tr>
             </table>
         </div>
