--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </tr>
                 <tr>
                     <th>Product Size</th>
-                    <td><br>Large :- Width 25cm x Length 25cm x Height 25cm</br>
+                    <td>Large :- Width 25cm x Length 25cm x Height 25cm<br></br>
 Small :-  Width 30cm x Length 30cm x Height 30cm
 </td>
                 </tr>
